--- a/multi/tampa.properties
+++ b/multi/tampa.properties
@@ -1,7 +1,7 @@
-transitclock.core.agencyId=tampta
+transitclock.core.agencyId=tampa
 transitclock.db.dbUserName=postgres
 transitclock.db.dbPassword=transitclock
-transitclock.db.dbName=agency-tampta
+transitclock.db.dbName=agency-tampa
 transitclock.db.dbHost=172.17.0.2
 transitclock.db.dbType=postgresql
 transitclock.avl.gtfsRealtimeFeedURI=http://realtime.prod.obahart.org:8088/vehicle-positions
