--- a/multi/tampa.properties
+++ b/multi/tampa.properties
@@ -5,7 +5,7 @@ transitclock.db.dbName=agency-tampa
 transitclock.db.dbHost=172.17.0.2
 transitclock.db.dbType=postgresql
 transitclock.avl.gtfsRealtimeFeedURI=http://realtime.prod.obahart.org:8088/vehicle-positions
-transitclock.hibernate.connection.url=jdbc:postgresql://172.17.0.2:5432/agency-tampta
+transitclock.hibernate.connection.url=jdbc:postgresql://172.17.0.2:5432/agency-tampa
 transitclock.hibernate.configFile=/usr/local/transitclock/config/postgres.cfg.xml
 transitclock.modules.optionalModulesList=org.transitclock.avl.GtfsRealtimeModule
 transitclock.web.mapTileUrl=https://tile.openstreetmap.org/{z}/{x}/{y}.png
